rewrite of a bunch of stuff added jlink to package into tarball